# aliyun_assist_client

./: CMakeLists.txt  ChangeLog.txt  Licence.txt  Makefile  README  README-cn.md  README.md  README_cn.md  cmake_install.sh  dataencryptioncmd.go  go.mod  go.sum  install.nsi  listcontainerscmd.go  main.go  patch_linux.go  patch_windows.go  rootcmd.go  version
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_cn.md
.github/workflows/: build_package.yml  codeql-analysis.yml  go.yml  pull_request.yml  test.yml
acs-plugin-manager/: CMakeLists.txt  acs_plugin_manager.cpp  acs_plugin_manager.h  main.cpp
acs-plugin-manager/testdata/: installed_plugins
agent/cgroup/: cgroup.go  cgroup_test_linux.go  config.go  group_cpu.go  group_memory.go  manager.go  stats.go  utils.go
agent/channel/: channel.go  channel_gshell.go  channel_gshell_unix.go  channel_gshell_windows.go  channel_manager.go  channel_manager_test.go  channel_test.go  channel_websocket.go  netcheck.go
agent/checkagentpanic/: redirectstderr.go  redirectstderr_freebsd.go  redirectstderr_linux.go  redirectstderr_test.go  redirectstderr_unix.go  redirectstderr_unix_test.go  redirectstderr_windows.go
agent/checkkdump/: checkkdump_freebsd.go  checkkdump_linux.go  checkkdump_windows.go
agent/checknet/: check.go  checknet_linux_test.go  networkcategorycache.go  path.go  report.go  routine.go  routine_linux.go  routine_unsupported.go  wraphttputil.go  wraphttputil_linux.go
agent/checkospanic/: checkospanic_freebsd.go  checkospanic_linux.go  checkospanic_linux_test.go  checkospanic_windows.go  checkospanic_windows_test.go
agent/checkvirt/: checkvirt_freebsd.go  checkvirt_unix.go  checkvirt_windows.go  winversion.go
agent/clientreport/: clientreport.go  commandreport.go  commandreport_test.go  netstat.go  panicreport.go  updatereport.go  updatereport_test.go
agent/container/: list.go
agent/cryptdata/: api.go  cryptdata.go  secretparam.go
agent/flagging/: coldstart.go  normalizecrlf.go
agent/heartbeat/: heartbeat.go  heartbeat_test.go
agent/hybrid/: hybrid.go  hybrid_test.go
agent/install/: service_freebsd.go  service_linux.go  service_windows.go
agent/inventory/: inventory.go  inventory_test.go
agent/ipc/: path.go
agent/kickvmhandle/: agenthandle.go  agenthandle_unix.go  agenthandle_windows.go  filehandle.go  optionhandle.go  optionhandle_test.go  sessionhandle.go  statushandle.go  taskhandle.go
agent/log/: assistlog.go  assistlog_test.go  formatter.go  formatter_unix.go  formatter_windows.go
agent/metrics/: event.go  metrics.go  metrics_test.go  utils_linux.go  utils_windows.go
agent/perfmon/: perfmon.go  perfmon_freebsd.go  perfmon_linux.go  perfmon_test.go  perfmon_unlinux.go  perfmon_windows.go
agent/pluginmanager/: api.go  config.go  installeds.go  model.go  path.go  pluginmanager.go  pluginmanager_freebsd.go  pluginmanager_linux.go  pluginmanager_test.go  pluginmanager_unix.go  pluginmanager_windows.go
agent/statemanager/: api.go  cache.go  cache_test.go  schedule.go  schedule_test.go  statemanager.go  statemanager_test.go  statetemplate.go  statetemplate_test.go
agent/taskengine/: api.go  basetask.go  basetask_test.go  (+16 more)
cli/: readme
common/: CMakeLists.txt
common/apiserver/: default.go  fromenv.go  fromexe.go  fromexe_unix.go  fromexe_windows.go  general.go  hybrid.go  hybrid_test.go
common/envutil/: envutil.go
common/executil/: executil.go
common/filelock/: filelock.go  filelock_unix.go  filelock_windows.go
common/fuzzyjson/: fuzzyjson.go
common/langutil/: codec.go  compat_unix.go  compat_windows.go  getlang_unix.go  getlang_windows.go  string.go
common/machineid/: id.go  id_linux.go  id_test.go
common/pathutil/: assistpath.go  assistpath_test.go
common/requester/: apiserver.go  http.go  provider.go  proxy.go  regionid.go  rootca.go
common/update/: api.go  api_test.go  phase.go  phase_test.go  report.go  report_unix.go  report_windows.go  verify_freebsd_arm64.go  verify_windows_amd64.go
common/utils/: AssistPath.cpp  AssistPath.h  CStringUtil.h  CheckNet.cpp  CheckNet.h  DeviceUtils.cpp  DeviceUtils.h  DirIterator.cpp  DirIterator.h  Encode.cpp  Encode.h  FileUtil.cpp  FileUtil.h  FileVersion.cpp  FileVersion.h  Log.cpp  Log.h  MutexLocker.h  OsUtil.cpp  OsUtil.h  OsVersion.cpp  OsVersion.h  ProcessSingleton.cpp  ProcessSingleton.h  ProcessUtil.cpp  ProcessUtil.h  SubProcess.cpp  SubProcess.h  SystemInfo.cpp  SystemInfo.h  TimeTool.cpp  TimeTool.h  VersionComparator.cpp  VersionComparator.h  backtrace.cpp  backtrace.h  config.cpp  config.h  dump.cpp  dump.h  (+10 more)
common/zipfile/: unzip.go
config/: host.conf
init/: aliyun-service  aliyun-service.conf  aliyun.service  init-functions  install  install_service  restart_service  uninstall
package_installer/: CMakeLists.txt  main.cpp
package_installer/packagemanager/: dbmanager.cpp  dbmanager.h  packageinfo.h  packagemanager.cpp  packagemanager.h
service/: CMakeLists.txt  gshell.h  gshell_linux.cpp  gshell_win.cpp  main.cpp  notifer_factory .cpp  notifer_factory.cpp  notifer_factory.h  service_linux.cpp  service_win.cpp  task_notifer.h  wskt_notifer.cpp  wskt_notifer.h
service/linux/: kvm_notifer.cpp  kvm_notifer.h  log_util.c  log_util.h  service_app.cpp  service_app.h  xen_notifer.cpp  xen_notifer.h  xs.h  xs_lib.h  xs_shell.c  xs_shell.cc  xs_shell.h
service/linux/xs/: xs.h  xs_lib.h
service/windows/: kvm_notifer.cpp  kvm_notifer.h  log_util.cc  log_util.h  service_app.cpp  service_app.h  service_base.cpp  service_base.h  xen_notifer.cpp  xen_notifer.h  xs.cc  xs.h  xs_shell.cc  xs_shell.h
task_engine/: base_task.cpp  base_task.h  fetch_task.cpp  fetch_task.h  schedule_task.cpp  schedule_task.h  sendfile.cpp  sendfile.h  task.cpp  task.h  task_factory.cpp  task_factory.h  timer_manager.cpp  timer_manager.h
test/: CMakeLists.txt  testTaskEngine.cpp  testUpdate.cpp  testdbmanager.cpp  testpackagemanager.cpp
test/testcase/: testAddTask.py
tools/: update-k8s-dependencies.sh
update/: CMakeLists.txt  main.cpp  main.go  update.go
update/update_check/: appcast.h  updatechecker.cpp  updatechecker.h
(+369 files in other folders)
