CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
# CMake 最低版本号要求
PROJECT (alyun-assist) 

include_directories(../third_party)
INCLUDE_DIRECTORIES(../common)


add_definitions(-DCURL_STATICLIB)
if(WIN32)
    set(LIB_NAME assist-common)
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
    set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
    include_directories(../third_party/libcurl/windows/include)
    link_directories(../third_party/libcurl/windows/lib)
	add_definitions(-DUNICODE -D_UNICODE)
	link_libraries(libcurl)
    link_libraries(setupapi)
else(UNIX)
    INCLUDE_DIRECTORIES(/usr/include)
    LINK_DIRECTORIES(/usr/lib)
    LINK_DIRECTORIES(/usr/local/lib)
    add_compile_options(-std=c++11)
    include_directories(../third_party/libcurl/linux/include)
    link_directories(../third_party/libcurl/linux/lib)
   # link_libraries(libcurl.a)
endif()

aux_source_directory(utils DIR_SRCS)
ADD_LIBRARY(assist-common ${DIR_SRCS})
if(UNIX)
TARGET_LINK_LIBRARIES(assist-common -lcurl)
endif()
