CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
# CMake 最低版本号要求
PROJECT (alyun-assist) 

include_directories(../third_party)
INCLUDE_DIRECTORIES(../common)

if(WIN32)
    set(LIB_NAME assist-common)
    include_directories(../third_party/libcurl/windows/include)
    link_directories(../third_party/libcurl/windows/lib)
	add_definitions(-DUNICODE -D_UNICODE)
	link_libraries(libcurl)
    link_libraries(setupapi)
    link_libraries(ws2_32)
else(UNIX)
    INCLUDE_DIRECTORIES(/usr/include)
    LINK_DIRECTORIES(/usr/lib)
    LINK_DIRECTORIES(/usr/local/lib)
    include_directories(../third_party/libcurl/linux/include)
    link_directories(../third_party/libcurl/linux/lib)
	link_libraries(curl ssl crypto)
    include_directories(../third_party/libunwind/include)
    link_directories(../third_party/libunwind/lib)
	link_libraries(unwind)
endif()

aux_source_directory(utils DIR_SRCS)
ADD_LIBRARY(assist-common ${DIR_SRCS})

