CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
# CMake 最低版本号要求
PROJECT (alyun-assist-test) 

include_directories(../common)
include_directories(../third_party)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(../third_party/googletest/include)
include_directories(../task_engine)
link_directories(../third_party/googletest/lib)

link_directories(../common)
link_directories(../third_party)
add_definitions(-DCURL_STATICLIB)
add_definitions(-DTEST_MODE)
if(WIN32)
    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/INCREMENTAL:NO /DEBUG")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
    set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
    link_libraries(shlwapi Psapi version)
    link_libraries(ws2_32 Wldap32)
    link_libraries(libcurl)
    link_libraries(libeay32)
    link_libraries(ssleay32)
    link_directories(../third_party/libcurl/windows/lib)
    include_directories(../third_party/libcurl/windows/include)
    add_definitions(-DUNICODE -D_UNICODE)
else(UNIX)
    include_directories(../third_party/libcurl/linux/include)
    link_directories(../third_party/libcurl/linux/lib)
    INCLUDE_DIRECTORIES(/usr/include)
    LINK_DIRECTORIES(/usr/lib)
    LINK_DIRECTORIES(/usr/local/lib)
    link_libraries(libcurl.a)
    link_libraries(pthread)
    link_libraries(ssl crypto)
    add_compile_options(-std=c++11)
endif()
file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/data/test.zip DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../output)
file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/data/python-3.6.1.zip DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../output)
file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/data/node-v6.11.2-linux-x86.zip DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../output)
link_libraries(gtest gtest_main)
link_libraries(assist-common)
link_libraries(third_party)
if(UNIX)
link_libraries(dl)
endif()
aux_source_directory(../task_engine DIR_SRCS)
aux_source_directory(../task_engine/plugin DIR_SRCS)
aux_source_directory(. DIR_SRCS)
aux_source_directory(../update/update_check DIR_SRCS)
aux_source_directory(../package_installer/packagemanager DIR_SRCS)
ADD_EXECUTABLE(alyun-assist-test ${DIR_SRCS})
if(WIN32)
SET_TARGET_PROPERTIES(alyun-assist-test PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_CURRENT_SOURCE_DIR}/../output/)
SET_TARGET_PROPERTIES(alyun-assist-test PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../output/)
else(UNIX)
SET_TARGET_PROPERTIES(alyun-assist-test PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../output/)
endif()